--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "nodemon ./src/app.js"
+    "start": "npm run prod",
+    "build": "npm-run-all clean transpile",
+    "serve": "node dist/app.js",
+    "dev": "NODE_ENV=development npm-run-all build serve",
+    "prod": "NODE_ENV=production npm-run-all build serve",
+    "transpile": "babel ./src --out-dir dist  --copy-files",
+    "clean": "rimraf dist"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +22,11 @@
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "nodemon": "^2.0.3",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2"
   }
 }
